# lanft

./: .gitignore  CMakeLists.txt  README.md  README_CN.md  conanfile.py  lanft.deb  nfpm.yaml
docs/superpowers/plans/: 2026-06-13-cli-mode.md
docs/superpowers/specs/: 2026-06-13-cli-mode-design.md
scripts/: postinstall.sh
src/: Makefile  cli.c  compat.h  compat_getopt.c  compat_getopt.h  compat_threads.h  config.c  discovery.c  discovery.h  file_browser.c  log.c  log.h  main.c  network.c  network.h  protocol.h  scanner.c  scanner.h  transfer.c  transfer.h  ui.c  ui.h
